Parser/FlukaParser.py
# Generated from FlukaParser.g4 by ANTLR 4.6
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class FlukaParser ( Parser ):

    grammarFileName = "FlukaParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"'+'", u"'-'", u"'|'", u"'('", u"')'" ]

    symbolicNames = [ u"<INVALID>", u"Integer", u"Float", u"ID", u"Delim", 
                      u"InLineComment", u"Whitespace", u"LineComment", u"GeoBegin", 
                      u"Material", u"Compound", u"Keyword", u"Newline", 
                      u"GeoEnd", u"End", u"BodyCode", u"Lattice", u"RegionName", 
                      u"StartExpansion", u"StartTranslat", u"StartTransform", 
                      u"EndExpansion", u"EndTranslat", u"EndTransform", 
                      u"GeoNewline", u"GeoWhitespace", u"GeoInLineComment", 
                      u"GeoLineComment", u"Plus", u"Minus", u"Bar", u"LParen", 
                      u"RParen" ]

    RULE_model = 0
    RULE_command = 1
    RULE_material_declr = 2
    RULE_material = 3
    RULE_compound = 4
    RULE_geoBegin = 5
    RULE_otherKeywords = 6
    RULE_geocards = 7
    RULE_body = 8
    RULE_region = 9
    RULE_zoneUnion = 10
    RULE_zone = 11
    RULE_expr = 12
    RULE_subZone = 13
    RULE_unaryExpression = 14
    RULE_geoDirective = 15
    RULE_expansion = 16
    RULE_translat = 17
    RULE_transform = 18
    RULE_lattice = 19

    ruleNames =  [ u"model", u"command", u"material_declr", u"material", 
                   u"compound", u"geoBegin", u"otherKeywords", u"geocards", 
                   u"body", u"region", u"zoneUnion", u"zone", u"expr", u"subZone", 
                   u"unaryExpression", u"geoDirective", u"expansion", u"translat", 
                   u"transform", u"lattice" ]

    EOF = Token.EOF
    Integer=1
    Float=2
    ID=3
    Delim=4
    InLineComment=5
    Whitespace=6
    LineComment=7
    GeoBegin=8
    Material=9
    Compound=10
    Keyword=11
    Newline=12
    GeoEnd=13
    End=14
    BodyCode=15
    Lattice=16
    RegionName=17
    StartExpansion=18
    StartTranslat=19
    StartTransform=20
    EndExpansion=21
    EndTranslat=22
    EndTransform=23
    GeoNewline=24
    GeoWhitespace=25
    GeoInLineComment=26
    GeoLineComment=27
    Plus=28
    Minus=29
    Bar=30
    LParen=31
    RParen=32

    def __init__(self, input):
        super(FlukaParser, self).__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ModelContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(FlukaParser.ModelContext, self).__init__(parent, invokingState)
            self.parser = parser

        def command(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(FlukaParser.CommandContext)
            else:
                return self.getTypedRuleContext(FlukaParser.CommandContext,i)


        def getRuleIndex(self):
            return FlukaParser.RULE_model

        def enterRule(self, listener):
            if hasattr(listener, "enterModel"):
                listener.enterModel(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitModel"):
                listener.exitModel(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitModel"):
                return visitor.visitModel(self)
            else:
                return visitor.visitChildren(self)




    def model(self):

        localctx = FlukaParser.ModelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_model)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 40
                self.command()
                self.state = 43 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FlukaParser.GeoBegin) | (1 << FlukaParser.Material) | (1 << FlukaParser.Keyword))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommandContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(FlukaParser.CommandContext, self).__init__(parent, invokingState)
            self.parser = parser

        def material_declr(self):
            return self.getTypedRuleContext(FlukaParser.Material_declrContext,0)


        def geoBegin(self):
            return self.getTypedRuleContext(FlukaParser.GeoBeginContext,0)


        def geocards(self):
            return self.getTypedRuleContext(FlukaParser.GeocardsContext,0)


        def GeoEnd(self):
            return self.getToken(FlukaParser.GeoEnd, 0)

        def otherKeywords(self):
            return self.getTypedRuleContext(FlukaParser.OtherKeywordsContext,0)


        def getRuleIndex(self):
            return FlukaParser.RULE_command

        def enterRule(self, listener):
            if hasattr(listener, "enterCommand"):
                listener.enterCommand(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCommand"):
                listener.exitCommand(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitCommand"):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = FlukaParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        try:
            self.state = 51
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FlukaParser.Material]:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.material_declr()
                pass
            elif token in [FlukaParser.GeoBegin]:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.geoBegin()
                self.state = 47
                self.geocards()
                self.state = 48
                self.match(FlukaParser.GeoEnd)
                pass
            elif token in [FlukaParser.Keyword]:
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.otherKeywords()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Material_declrContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(FlukaParser.Material_declrContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FlukaParser.RULE_material_declr

     
        def copyFrom(self, ctx):
            super(FlukaParser.Material_declrContext, self).copyFrom(ctx)



    class CompoundMaterialContext(Material_declrContext):

        def __init__(self, parser, ctx): # actually a FlukaParser.Material_declrContext)
            super(FlukaParser.CompoundMaterialContext, self).__init__(parser)
            self.copyFrom(ctx)

        def material(self):
            return self.getTypedRuleContext(FlukaParser.MaterialContext,0)

        def compound(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(FlukaParser.CompoundContext)
            else:
                return self.getTypedRuleContext(FlukaParser.CompoundContext,i)


        def enterRule(self, listener):
            if hasattr(listener, "enterCompoundMaterial"):
                listener.enterCompoundMaterial(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCompoundMaterial"):
                listener.exitCompoundMaterial(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitCompoundMaterial"):
                return visitor.visitCompoundMaterial(self)
            else:
                return visitor.visitChildren(self)


    class SimpleMaterialContext(Material_declrContext):

        def __init__(self, parser, ctx): # actually a FlukaParser.Material_declrContext)
            super(FlukaParser.SimpleMaterialContext, self).__init__(parser)
            self.copyFrom(ctx)

        def material(self):
            return self.getTypedRuleContext(FlukaParser.MaterialContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterSimpleMaterial"):
                listener.enterSimpleMaterial(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSimpleMaterial"):
                listener.exitSimpleMaterial(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitSimpleMaterial"):
                return visitor.visitSimpleMaterial(self)
            else:
                return visitor.visitChildren(self)



    def material_declr(self):

        localctx = FlukaParser.Material_declrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_material_declr)
        self._la = 0 # Token type
        try:
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = FlukaParser.SimpleMaterialContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.material()
                pass

            elif la_ == 2:
                localctx = FlukaParser.CompoundMaterialContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.material()
                self.state = 56 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 55
                    self.compound()
                    self.state = 58 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==FlukaParser.Compound):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MaterialContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(FlukaParser.MaterialContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Material(self):
            return self.getToken(FlukaParser.Material, 0)

        def Float(self, i=None):
            if i is None:
                return self.getTokens(FlukaParser.Float)
            else:
                return self.getToken(FlukaParser.Float, i)

        def Integer(self, i=None):
            if i is None:
                return self.getTokens(FlukaParser.Integer)
            else:
                return self.getToken(FlukaParser.Integer, i)

        def ID(self, i=None):
            if i is None:
                return self.getTokens(FlukaParser.ID)
            else:
                return self.getToken(FlukaParser.ID, i)

        def getRuleIndex(self):
            return FlukaParser.RULE_material

        def enterRule(self, listener):
            if hasattr(listener, "enterMaterial"):
                listener.enterMaterial(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMaterial"):
                listener.exitMaterial(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMaterial"):
                return visitor.visitMaterial(self)
            else:
                return visitor.visitChildren(self)




    def material(self):

        localctx = FlukaParser.MaterialContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_material)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(FlukaParser.Material)
            self.state = 64 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 63
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FlukaParser.Integer) | (1 << FlukaParser.Float) | (1 << FlukaParser.ID))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 66 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FlukaParser.Integer) | (1 << FlukaParser.Float) | (1 << FlukaParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CompoundContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(FlukaParser.CompoundContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Compound(self):
            return self.getToken(FlukaParser.Compound, 0)

        def Float(self, i=None):
            if i is None:
                return self.getTokens(FlukaParser.Float)
            else:
                return self.getToken(FlukaParser.Float, i)

        def Integer(self, i=None):
            if i is None:
                return self.getTokens(FlukaParser.Integer)
            else:
                return self.getToken(FlukaParser.Integer, i)

        def ID(self, i=None):
            if i is None:
                return self.getTokens(FlukaParser.ID)
            else:
                return self.getToken(FlukaParser.ID, i)

        def getRuleIndex(self):
            return FlukaParser.RULE_compound

        def enterRule(self, listener):
            if hasattr(listener, "enterCompound"):
                listener.enterCompound(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCompound"):
                listener.exitCompound(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitCompound"):
                return visitor.visitCompound(self)
            else:
                return visitor.visitChildren(self)




    def compound(self):

        localctx = FlukaParser.CompoundContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_compound)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(FlukaParser.Compound)
            self.state = 70 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 69
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FlukaParser.Integer) | (1 << FlukaParser.Float) | (1 << FlukaParser.ID))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 72 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FlukaParser.Integer) | (1 << FlukaParser.Float) | (1 << FlukaParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GeoBeginContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(FlukaParser.GeoBeginContext, self).__init__(parent, invokingState)
            self.parser = parser

        def GeoBegin(self):
            return self.getToken(FlukaParser.GeoBegin, 0)

        def Float(self, i=None):
            if i is None:
                return self.getTokens(FlukaParser.Float)
            else:
                return self.getToken(FlukaParser.Float, i)

        def Integer(self, i=None):
            if i is None:
                return self.getTokens(FlukaParser.Integer)
            else:
                return self.getToken(FlukaParser.Integer, i)

        def ID(self, i=None):
            if i is None:
                return self.getTokens(FlukaParser.ID)
            else:
                return self.getToken(FlukaParser.ID, i)

        def getRuleIndex(self):
            return FlukaParser.RULE_geoBegin

        def enterRule(self, listener):
            if hasattr(listener, "enterGeoBegin"):
                listener.enterGeoBegin(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitGeoBegin"):
                listener.exitGeoBegin(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitGeoBegin"):
                return visitor.visitGeoBegin(self)
            else:
                return visitor.visitChildren(self)




    def geoBegin(self):

        localctx = FlukaParser.GeoBeginContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_geoBegin)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(FlukaParser.GeoBegin)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FlukaParser.Integer) | (1 << FlukaParser.Float) | (1 << FlukaParser.ID))) != 0):
                self.state = 75
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FlukaParser.Integer) | (1 << FlukaParser.Float) | (1 << FlukaParser.ID))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OtherKeywordsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(FlukaParser.OtherKeywordsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Keyword(self):
            return self.getToken(FlukaParser.Keyword, 0)

        def Float(self, i=None):
            if i is None:
                return self.getTokens(FlukaParser.Float)
            else:
                return self.getToken(FlukaParser.Float, i)

        def Integer(self, i=None):
            if i is None:
                return self.getTokens(FlukaParser.Integer)
            else:
                return self.getToken(FlukaParser.Integer, i)

        def ID(self, i=None):
            if i is None:
                return self.getTokens(FlukaParser.ID)
            else:
                return self.getToken(FlukaParser.ID, i)

        def getRuleIndex(self):
            return FlukaParser.RULE_otherKeywords

        def enterRule(self, listener):
            if hasattr(listener, "enterOtherKeywords"):
                listener.enterOtherKeywords(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitOtherKeywords"):
                listener.exitOtherKeywords(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitOtherKeywords"):
                return visitor.visitOtherKeywords(self)
            else:
                return visitor.visitChildren(self)




    def otherKeywords(self):

        localctx = FlukaParser.OtherKeywordsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_otherKeywords)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(FlukaParser.Keyword)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FlukaParser.Integer) | (1 << FlukaParser.Float) | (1 << FlukaParser.ID))) != 0):
                self.state = 82
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FlukaParser.Integer) | (1 << FlukaParser.Float) | (1 << FlukaParser.ID))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GeocardsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(FlukaParser.GeocardsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def body(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(FlukaParser.BodyContext)
            else:
                return self.getTypedRuleContext(FlukaParser.BodyContext,i)


        def region(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(FlukaParser.RegionContext)
            else:
                return self.getTypedRuleContext(FlukaParser.RegionContext,i)


        def lattice(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(FlukaParser.LatticeContext)
            else:
                return self.getTypedRuleContext(FlukaParser.LatticeContext,i)


        def getRuleIndex(self):
            return FlukaParser.RULE_geocards

        def enterRule(self, listener):
            if hasattr(listener, "enterGeocards"):
                listener.enterGeocards(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitGeocards"):
                listener.exitGeocards(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitGeocards"):
                return visitor.visitGeocards(self)
            else:
                return visitor.visitChildren(self)




    def geocards(self):

        localctx = FlukaParser.GeocardsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_geocards)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 91
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [FlukaParser.BodyCode, FlukaParser.StartExpansion, FlukaParser.StartTranslat, FlukaParser.StartTransform]:
                    self.state = 88
                    self.body()
                    pass
                elif token in [FlukaParser.RegionName]:
                    self.state = 89
                    self.region()
                    pass
                elif token in [FlukaParser.Lattice]:
                    self.state = 90
                    self.lattice()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 93 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FlukaParser.BodyCode) | (1 << FlukaParser.Lattice) | (1 << FlukaParser.RegionName) | (1 << FlukaParser.StartExpansion) | (1 << FlukaParser.StartTranslat) | (1 << FlukaParser.StartTransform))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(FlukaParser.BodyContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FlukaParser.RULE_body

     
        def copyFrom(self, ctx):
            super(FlukaParser.BodyContext, self).copyFrom(ctx)



    class BodyDefPunctDelimContext(BodyContext):

        def __init__(self, parser, ctx): # actually a FlukaParser.BodyContext)
            super(FlukaParser.BodyDefPunctDelimContext, self).__init__(parser)
            self.copyFrom(ctx)

        def BodyCode(self):
            return self.getToken(FlukaParser.BodyCode, 0)
        def Delim(self, i=None):
            if i is None:
                return self.getTokens(FlukaParser.Delim)
            else:
                return self.getToken(FlukaParser.Delim, i)
        def ID(self, i=None):
            if i is None:
                return self.getTokens(FlukaParser.ID)
            else:
                return self.getToken(FlukaParser.ID, i)
        def Float(self, i=None):
            if i is None:
                return self.getTokens(FlukaParser.Float)
            else:
                return self.getToken(FlukaParser.Float, i)

        def enterRule(self, listener):
            if hasattr(listener, "enterBodyDefPunctDelim"):
                listener.enterBodyDefPunctDelim(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBodyDefPunctDelim"):
                listener.exitBodyDefPunctDelim(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitBodyDefPunctDelim"):
                return visitor.visitBodyDefPunctDelim(self)
            else:
                return visitor.visitChildren(self)


    class BodyDefSpaceDelimContext(BodyContext):

        def __init__(self, parser, ctx): # actually a FlukaParser.BodyContext)
            super(FlukaParser.BodyDefSpaceDelimContext, self).__init__(parser)
            self.copyFrom(ctx)

        def BodyCode(self):
            return self.getToken(FlukaParser.BodyCode, 0)
        def ID(self):
            return self.getToken(FlukaParser.ID, 0)
        def Integer(self):
            return self.getToken(FlukaParser.Integer, 0)
        def Float(self, i=None):
            if i is None:
                return self.getTokens(FlukaParser.Float)
            else:
                return self.getToken(FlukaParser.Float, i)

        def enterRule(self, listener):
            if hasattr(listener, "enterBodyDefSpaceDelim"):
                listener.enterBodyDefSpaceDelim(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBodyDefSpaceDelim"):
                listener.exitBodyDefSpaceDelim(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitBodyDefSpaceDelim"):
                return visitor.visitBodyDefSpaceDelim(self)
            else:
                return visitor.visitChildren(self)


    class GeometryDirectiveContext(BodyContext):

        def __init__(self, parser, ctx): # actually a FlukaParser.BodyContext)
            super(FlukaParser.GeometryDirectiveContext, self).__init__(parser)
            self.copyFrom(ctx)

        def geoDirective(self):
            return self.getTypedRuleContext(FlukaParser.GeoDirectiveContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterGeometryDirective"):
                listener.enterGeometryDirective(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitGeometryDirective"):
                listener.exitGeometryDirective(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitGeometryDirective"):
                return visitor.visitGeometryDirective(self)
            else:
                return visitor.visitChildren(self)



    def body(self):

        localctx = FlukaParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                localctx = FlukaParser.GeometryDirectiveContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.geoDirective()
                pass

            elif la_ == 2:
                localctx = FlukaParser.BodyDefSpaceDelimContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.match(FlukaParser.BodyCode)
                self.state = 97
                _la = self._input.LA(1)
                if not(_la==FlukaParser.Integer or _la==FlukaParser.ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 99 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 98
                    self.match(FlukaParser.Float)
                    self.state = 101 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==FlukaParser.Float):
                        break

                pass

            elif la_ == 3:
                localctx = FlukaParser.BodyDefPunctDelimContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.match(FlukaParser.BodyCode)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==FlukaParser.Delim:
                    self.state = 104
                    self.match(FlukaParser.Delim)
                    self.state = 106
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==FlukaParser.Float or _la==FlukaParser.ID:
                        self.state = 105
                        _la = self._input.LA(1)
                        if not(_la==FlukaParser.Float or _la==FlukaParser.ID):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()


                    self.state = 112
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RegionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(FlukaParser.RegionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def RegionName(self):
            return self.getToken(FlukaParser.RegionName, 0)

        def Integer(self):
            return self.getToken(FlukaParser.Integer, 0)

        def zone(self):
            return self.getTypedRuleContext(FlukaParser.ZoneContext,0)


        def zoneUnion(self):
            return self.getTypedRuleContext(FlukaParser.ZoneUnionContext,0)


        def getRuleIndex(self):
            return FlukaParser.RULE_region

        def enterRule(self, listener):
            if hasattr(listener, "enterRegion"):
                listener.enterRegion(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRegion"):
                listener.exitRegion(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitRegion"):
                return visitor.visitRegion(self)
            else:
                return visitor.visitChildren(self)




    def region(self):

        localctx = FlukaParser.RegionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_region)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(FlukaParser.RegionName)
                self.state = 116
                self.match(FlukaParser.Integer)
                self.state = 117
                self.zone()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(FlukaParser.RegionName)
                self.state = 119
                self.match(FlukaParser.Integer)
                self.state = 120
                self.zoneUnion()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ZoneUnionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(FlukaParser.ZoneUnionContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FlukaParser.RULE_zoneUnion

     
        def copyFrom(self, ctx):
            super(FlukaParser.ZoneUnionContext, self).copyFrom(ctx)



    class MultipleUnionContext(ZoneUnionContext):

        def __init__(self, parser, ctx): # actually a FlukaParser.ZoneUnionContext)
            super(FlukaParser.MultipleUnionContext, self).__init__(parser)
            self.copyFrom(ctx)
